<resources>
    <string name="app_name">AllNews</string>
    <string name="title_home">Новости</string>
    <string name="title_dashboard">Закладки</string>
    <string name="title_notifications">Поиск</string>
    <string name="main_toolbar_title">Мои новости</string>
    <string name="search">Что интересует?</string>
    <string name="title">Заголовок</string>
    <string name="description">Краткое описание</string>
    <string name="published_at">01.23.45</string>
    <string name="source">ссылка на статью</string>
    <string name="full_description">Полное описание</string>
    <string name="retry">Повторить</string>
    <string name="save_bookmark">Сохранить в закладки</string>
    <string name="tv_splashscreen_header">Все</string>
    <string name="tv_splashscreen_footer">Новости</string>
    <string name="description_logo">logo</string>
    <string name="history">История</string>
    <string name="delete_history_title">Удалить историю</string>
</resources>